--- a/首页.html
+++ b/首页.html
@@ -158,7 +158,7 @@
         <div id="u29_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u30" class="text">
-          <p><span>活动二：老朋友的新问题</span></p>
+          <p><span>活动二：观点PK</span></p>
         </div>
       </div>
 
@@ -203,7 +203,7 @@
         <div id="u39_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u40" class="text">
-          <p><span>参与讨论</span></p>
+          <p><span>参与投票</span></p>
         </div>
       </div>
 
@@ -938,6 +938,15 @@
           <div id="u200" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
           </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (图片) -->
+      <div id="u201" class="ax_default image">
+        <img id="u201_img" class="img " src="images/首页/u201.png"/>
+        <!-- Unnamed () -->
+        <div id="u202" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
         </div>
       </div>
     </div>
